--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table cellspacing="15">
       <tr>
         <td>
-          <img src="avatar.jfif" width="200" alt="тут моя фотка" />
+          <img src="Avatar.jfif" width="200" alt="тут моя фотка" />
         </td>
         <td>
           <h1>Алена Тульская</h1>
