--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table cellspacing="15">
       <tr>
         <td>
-          <img src="Avatar.jfif" width="200" alt="тут моя фотка" />
+          <img src="img\avatar.jfif" width="200" alt="тут моя фотка" />
         </td>
         <td>
           <h1>Алена Тульская</h1>
@@ -19,10 +19,20 @@
     </table>
 	
 	<HR>
+	<h2>Знакомство</h2>
 	<video width="480" height="320" controls>
-  <source src="Video.mp4" type="video/mp4">
+  <source src="vid\Hi.mp4" type="video/mp4">
+
   Your browser does not support the video tag.
 </video>
+	<video width="480" height="320" controls>
+  <source src="vid\vg.mp4" type="video/mp4">
+  
+  
+
+  Your browser does not support the video tag.
+</video>
+
 	
 	<HR>
     <h2>Мои хобби</h2>
